slurm-4137295.out
--------------------------------------------------------------
Begin Slurm Prologue Wed Oct 18 12:12:09 CDT 2023 1697649129
Job ID:		4137295
Username:	l.peiwang
Partition:	tier2_cpu
End Slurm Prologue Wed Oct 18 12:12:09 CDT 2023 1697649129
--------------------------------------------------------------
/home/l.peiwang/.local/lib/python3.10/site-packages/nilearn/input_data/__init__.py:23: FutureWarning: The import path 'nilearn.input_data' is deprecated in version 0.9. Importing from 'nilearn.input_data' will be possible at least until release 0.13.0. Please import from 'nilearn.maskers' instead.
  warnings.warn(message, FutureWarning)
Traceback (most recent call last):
  File "/ceph/chpc/home/l.peiwang/Modality_Comparison_AD/cd_interpretation_PET.py", line 6, in <module>
    from main import hyperparameter_tuning_visual_cov_V3
  File "/ceph/chpc/home/l.peiwang/Modality_Comparison_AD/main.py", line 234
    train_label = label
    ^
IndentationError: expected an indented block after function definition on line 233
--------------------------------------------------------------
Begin Slurm Epilogue Wed Oct 18 12:12:15 CDT 2023 1697649135
Name                : ex_visual
User                : l.peiwang
Partition           : tier2_cpu
Nodes               : highmem02
Cores               : 2
State               : COMPLETED
Submit              : 2023-10-18T12:12:09
Start               : 2023-10-18T12:12:09
End                 : 2023-10-18T12:12:13
Reserved Walltime   : 1-16:50:00
Used Walltime       :   00:00:04
Used CPU Time       :   00:00:01
% User (Computation): 86.58%
% System (I/O)      : 13.42%
Mem Reserved        : 53000M
Max Mem Used        : 0.00  (0.0)
Max Disk Write      : 0.00  (0.0)
Max Disk Read       : 0.00  (0.0)
Max-Mem-Used Node   : highmem02
Max-Disk-Write Node : highmem02
Max-Disk-Read Node  : highmem02
End Slurm Epilogue Wed Oct 18 12:12:15 CDT 2023 1697649135
--------------------------------------------------------------
